--- a/hello.html
+++ b/hello.html
@@ -7,6 +7,8 @@
     <title>Hello Harvard</title>
 </head>
 <body>
-    Hello, World
+    <h1> Heading 1</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero deleniti aliquid adipisci nobis vel exercitationem error, alias veritatis accusamus a doloribus quas dolore laborum voluptatibus. Vero facilis atque illo labore.</p>
+    
 </body>
 </html>
