add exclamatory sign

--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,7 @@
     <title>Hello Harvard</title>
 </head>
 <body>
-    <h1> Welcome to my Website</h1>
+    <h1> Welcome to my Website!</h1>
     <h2>This is Harvard lecture 1 on Git </h2>
     <h3>changing</h3>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero deleniti aliquid adipisci nobis vel exercitationem error, alias veritatis accusamus a doloribus quas dolore laborum voluptatibus. Vero facilis atque illo labore.</p>
